@@ -54,8 +54,8 @@ int_to_dom_tree(const char *tag, gint64 val)
 {
     gchar *text;
     xmlNodePtr result;
-    
-    text = g_strdup_printf("%lld", val);
+
+    text = g_strdup_printf("%lld", (long long int) val);
     result = text_to_dom_tree(tag, text);
     g_free(text);
     return result;
